--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 InvoiceProcessing-RPA/failedInvoices/
 InvoiceProcessing-RPA/paidInvoices/
 InvoiceProcessing-RPA/ifs/
+InvoiceProcessing-RPA/bot/invoiceReaders/~$Abakus.xlsx
